--- a/StormWeb/Views/Appointment/Create.cshtml
+++ b/StormWeb/Views/Appointment/Create.cshtml
@@ -12,7 +12,10 @@
             changeMonth: true,
             changeYear: true,
             minDate: '0',
-            maxDate: '+3M'
+            maxDate: '+3M',
+            showOn: "button",
+            buttonImage: "/Content/img/calendar_btn.png",
+            buttonImageOnly: true
         });
     });
 </script>
