--- a/StormWeb/Views/Client/Enquire.cshtml
+++ b/StormWeb/Views/Client/Enquire.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Enquire";
-    Layout = "~/Views/Shared/_LayoutEmpty.cshtml";
+    Layout = "~/Views/Shared/_LayoutOneColumn.cshtml";
 }
 @using StormWeb.Helper
 <script type="text/javascript">
@@ -69,10 +69,6 @@
             },
             "AddressModel.Address_Name": {
                 required: true
-            },
-            "AddressModel.Apartment_Number": {
-                required: true,
-                digits: true
             },
             "AddressModel.City": {
                 required: true
@@ -178,7 +174,7 @@
                         <fieldset>
                             <span class="span8">
                                 <div class="control-group">
-                                    @Html.Label("Title", null, new { @class = "control-label" })
+                                    @Html.Label("Title", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         <select data-placeholder="Title" style="width: 100px" class="chzn-select" tabindex="13"
                                             id="ClientModel_Title" name="ClientModel.Title">
@@ -196,7 +192,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Given Name", null, new { @class = "control-label" })
+                                    @Html.Label("Given Name", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.ClientModel.GivenName, new { @class = "input-xlarge text-tip", placeholder = "Given Name" })
                                         <p class="help-block">
@@ -205,7 +201,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Last name", null, new { @class = "control-label" })
+                                    @Html.Label("Last name", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.ClientModel.LastName, new { @class = "input-xlarge text-tip", placeholder = "Last Name" })
                                         <p class="help-block">
@@ -215,7 +211,7 @@
                                 </div>
                                 <div class="input-append date dp" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                                     <div class="control-group">
-                                        @Html.Label("Date of Birth", null, new { @class = "control-label" })
+                                        @Html.Label("Date of Birth", null, new { @class = "control-label form-required" })
                                         <div class="controls">
                                             <div class="input-append">
                                                 @Html.TextBoxFor(model => model.ClientModel.Dob, new { @readonly = "readonly", @class = "dp1" })
@@ -227,7 +223,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Nationality", null, new { @class = "control-label" })
+                                    @Html.Label("Nationality", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.DropDownListFor(model => model.ClientModel.Nationality, (IEnumerable<SelectListItem>)ViewBag.NationalityList, new { @class = "chzn-select" })
                                         <p class="help-block">
@@ -251,7 +247,7 @@
                         <fieldset>
                             <span class="span8">
                                 <div class="control-group">
-                                    @Html.Label("Email Address", null, new { @class = "control-label" })
+                                    @Html.Label("Email Address", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.ClientModel.Email, new { @class = "input-xlarge text-tip", placeholder = "email@domain.com" }) <span style="display:none" id="emailLoad"><img src="../../Content/img/ajax-loader.gif" alt="Checking email"/></span>
                                         <p class="help-block">
@@ -261,7 +257,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Primary Contact Number", null, new { @class = "control-label" })
+                                    @Html.Label("Primary Contact Number", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.ClientModel.ContactNumber, new { @class = "input-xlarge text-tip", placeholder = "+XX XXX XXX XXX" })
                                         <p class="help-block">
@@ -295,14 +291,13 @@
                         <fieldset>
                             <span class="span8">
                                 <div class="control-group">
-                                    @Html.Label("Street Name and Number", null, new { @class = "control-label" })
+                                    @Html.Label("Address", null, new { @class = "control-label form-required" })
                                     <div class="controls">
-                                        @Html.TextBox("AddressModel.Address_Name", "", new { @class = "input-xlarge text-tip", @onkeypress = "return alphanumeric_only(this);", placeholder = "Street Name" })
-                                        @Html.TextBox("AddressModel.Apartment_Number", "", new { placeholder = "Street Number", @class = "input-small" })
+                                        @Html.TextBox("AddressModel.Address_Name", "", new { @class = "input-xlarge text-tip", @onkeypress = "return alphanumeric_only(this);", placeholder = "Address 1" })
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("City", null, new { @class = "control-label" })
+                                    @Html.Label("City", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.AddressModel.City, new { @class = "input-xlarge text-tip", @onkeypress = "return alphanumeric_only(this);", placeholder = "City" })
                                         <p class="help-block">
@@ -311,7 +306,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("State", null, new { @class = "control-label" })
+                                    @Html.Label("State", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.AddressModel.State, new { @class = "input-xlarge text-tip", @onkeypress = "return alphanumeric_only(this);", placeholder = "State" })
                                         <p class="help-block">
@@ -320,7 +315,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Country", null, new { @class = "control-label" })
+                                    @Html.Label("Country", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.DropDownListFor(model => model.AddressModel.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, new { @class = "chzn-select" })
                                         <p class="help-block">
@@ -329,7 +324,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Zip Code", null, new { @class = "control-label" })
+                                    @Html.Label("Zip Code", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.TextBoxFor(model => model.AddressModel.Zipcode, new { @class = "input-xlarge text-tip" })
                                         <p class="help-block">
@@ -338,7 +333,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Country of Residence", null, new { @class = "control-label" })
+                                    @Html.Label("Country of Residence", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.DropDownListFor(model => model.AddressModel.Country.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, new { @class = "chzn-select" })
                                         <p class="help-block">
@@ -366,13 +361,13 @@
                         </div>
                         <div class="widget-head">
                             <h5 style="vertical-align: bottom">
-                                <span class="dashboard-icons-colors milestone_sl"></span>Choose your service
+                                <span class="dashboard-icons-colors milestone_sl"></span>Choose country
                             </h5>
                         </div>
                         <fieldset>
                             <span class="span8">
                                 <div class="control-group">
-                                    @Html.Label("Country of Destination", null, new { @class = "control-label" })
+                                    @Html.Label("Country of Destination", null, new { @class = "control-label form-required" })
                                     <div class="controls">
                                         @Html.DropDownListFor(model => model.ClientModel.PreferredCountry, (IEnumerable<SelectListItem>)ViewBag.RepresentedCountry, new { @class = "chzn-select" })
                                         <p class="help-block">
@@ -410,7 +405,7 @@
         else if (event) keycode = event.keyCode;
         else if (e) keycode = e.which;
         else return true;
-        if ((keycode >= 65 && keycode <= 90) || (keycode >= 97 && keycode <= 122) || keycode == 32) {
+        if ((keycode >= 48 && keycode <= 57) || (keycode >= 65 && keycode <= 90) || (keycode >= 97 && keycode <= 122) || keycode == 32 || keycode == 44 || keycode == 45 || keycode == 47) {
             return true;
         }
         else {
