--- a/StormWeb/Views/Client/List.cshtml
+++ b/StormWeb/Views/Client/List.cshtml
@@ -6,7 +6,7 @@
 <script src="@Url.Content("~/Scripts/jquery.widget.js")" type="text/javascript"></script>
 <div class="box">
     <h4 class="white">
-        Client List</h4>
+        Client List  <a class="btn btn-warning btn-mini" href="@Url.Action("Index", "University")"><< Back to University</a></h2> </h4>
     <div class="box-container">
         @if (ViewBag.Msg != null)
         {
