--- a/StormWeb/Views/Client/RequestAppointment.cshtml
+++ b/StormWeb/Views/Client/RequestAppointment.cshtml
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    @Html.Label("Additional Comment", null, new { @class = "control-label" })
+                                    @Html.Label("Additional Comment(Optional)", null, new { @class = "control-label" })
                                     <div class="controls">
                                         <div class="editor-field">
                                             @Html.TextAreaFor(model => model.Comment, new { @class = "text-tip span8" })
