--- a/StormWeb/Views/Document/UploadFileTemp.cshtml
+++ b/StormWeb/Views/Document/UploadFileTemp.cshtml
@@ -9,30 +9,29 @@
     $(document).ready(function () {
         $("#save").hide();
 
+
         $("#upload-files").click(function () {
+
             var valid = true;
             if ($("#Form_Name").val() == '') {
                 valid = false;
                 alert("Form Name is required");
-            } if ($("#file").val() == '') {
-                valid = false;
-                alert("File is not selected");
-            }
-            var ext = $('#file').val().split('.').pop().toLowerCase();
-            if ($.inArray(ext, ['doc', 'gif', 'png', 'jpg', 'jpeg', 'pdf']) == -1) {
-                valid = false;
-                alert('invalid extension, only files with .doc .gif .png .jpg .jpeg .pdf is allowed!');
+            } if ($("#file").val() != '') {
+                var ext = $('#file').val().split('.').pop().toLowerCase();
+                if ($.inArray(ext, ['doc', 'gif', 'png', 'jpg', 'jpeg', 'pdf']) == -1) {
+                    valid = false;
+                    alert('invalid extension, only files with .doc .gif .png .jpg .jpeg .pdf is allowed!');
+                }
             }
             if (valid) {
+                $("#LoadUpload").show();
                 $('#upload').submit();
-                
+
             }
 
         });
     });
 </script>
-
-
 
 @using (Html.BeginForm("UploadFileTemp", "Document",
         FormMethod.Post, new { id = "upload", enctype = "multipart/form-data" }))
@@ -57,6 +56,11 @@
     <div style="text-align:center">
     <input class="btn btn-primary" type='button' id='upload-files' value=' Upload Files ' />
     </div>
+    
+    <div style="text-align:center; display:none" id="LoadUpload">
+        @Html.SpinnerImg("Loading")Please hold on, this can take a while... Do NOT close this window.
+        
+    </div> 
     
 @*   <div id="save">
    <a   href="@Url.Action("Refresh", "Document")" class='myFrame color-icons drive_cd_empty_co tip-top' data-original-title="Close" title="Close "></a>
