--- a/StormWeb/Views/Event/Index.cshtml
+++ b/StormWeb/Views/Event/Index.cshtml
@@ -99,7 +99,7 @@
                   },
                   events: {
                       url: "/Event/GetEvents",
-                      textColor: 'black'
+                      textColor: 'black',
                   },
                   eventClick: function (calEvent, jsEvent, view) {
 
@@ -192,7 +192,7 @@
         
         .stud .fc-event-skin 
         {
-            background-color: #F8D6F1;
+            background-color: #7BA861;
         }
         
         #calendar
