--- a/StormWeb/Views/Application/Index.cshtml
+++ b/StormWeb/Views/Application/Index.cshtml
@@ -221,34 +221,7 @@ $(function () {
                                      @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%</div></div>'>@b </a> *@
                                                 </li>
                                             </ul>
-                                        </td>
-                                        @*    <td class="rowspan4">
-                                        <div id="popover@(item.Course_Id)" class="progress progress-striped active tip-top" title="@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%">
-                                            <div class="bar" style="width: @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%">
-                                            </div>
-                                        </div>
-                                        <div id="sliderContainer@(item.Course_Id)" style="display: none">
-                                            <input type="hidden" id="hidden@(item.Course_Id)" value="@item.Student_Id" />
-                                            <ul style="width:400px">
-                                                <li>
-                                                    <div id="slider@(item.Course_Id)" class="noUiSlider"></div>
-                                                    
-                                                    <div class="steps-2">
-                                                        <span class="tick"><br><a class="tip-top" title="Initiated"><i class="color-icons add_co"></i></a></span>
-                                                        <span class="tick" style="left: 10%;"><br><a class="tip-top" title="Staff is assigned"><i class="color-icons user_business_co"></i></a></span>
-                                                        <span class="tick" style="left: 20%;"><br><a class="tip-top" title="Documents completed"><i class="color-icons folder_co"></i></a></span>
-                                                        <span class="tick" style="left: 30%;"><br><a class="tip-top" title="Application submitted"><i class="color-icons page_white_get_co"></i></a></span>
-                                                        <span class="tick" style="left: 40%;"><br><a class="tip-top" title="Offer Letter received"><i class="color-icons doc_pdf_co"></i></a></span>
-                                                        <span class="tick" style="left: 50%;"><br><a class="tip-top" title="CoE received"><i class="color-icons accept_co"></i></a></span>
-                                                    </div>
-                                                </li>
-                                                <li style="text-align: center">
-                                                    <a class="btn btn-mini btn-primary" id="confirmSlider@(item.Course_Id)" value="@item.Course_Id">Ok</a>
-                                                    <a class="btn btn-mini btn-warning" id="cancelSlider@(item.Course_Id)" value="@item.Course_Id">Cancel</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </td>*@
+                                        </td>                                       
                                         @if (StormWeb.Helper.CookieHelper.isStaff())
                                         {
                                             <td>
@@ -270,15 +243,6 @@ $(function () {
                                                         <a href="#" class="btn" data-dismiss="modal" id="dismissModal">No</a> <a href="@Url.Action("DeleteConfirmed", new { id = item.Application_Id })" class="btn btn-modal" id="save" type="submit" value="Yes">
                                                             Yes</a>
                                                     </div>
-                                                </div>
-                                                <div class="btn-group pull-right">
-                                                    <button data-toggle="dropdown" class="btn dropdown-toggle">
-                                                        <i class="icon-cog"></i><span class="caret"></span>
-                                                    </button>
-                                                    <ul class="dropdown-menu">
-                                                        <li><a href="#" id="setStatus@(item.Course_Id)" value="@item.Course_Id"><i class="color-icons asterisk_orange_co">
-                                                        </i>Set status</a></li>
-                                                    </ul>
                                                 </div>
                                             </td>
                                     
@@ -410,6 +374,9 @@ $(function () {
             </div>
         </div>
     </div>
+</div>
+<div class="row-fluid">
+    <div class="span12" style="text-align:center"><a href="@Url.Action("Index","Document")" class="btn btn-primary">Manage Application Documents &raquo;</a></div>
 </div>
 <script type="text/javascript">
     $(function () {
