--- a/StormWeb/Views/Client/AppointmentSuccess.cshtml
+++ b/StormWeb/Views/Client/AppointmentSuccess.cshtml
@@ -39,6 +39,15 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="@Url.Content("~/Content/ico/apple-touch-icon-72-precomposed.png")" />
     <link rel="apple-touch-icon-precomposed" href="@Url.Content("~/Content/ico/apple-touch-icon-57-precomposed.png")" />
     @{ Html.EnableClientValidation(); }
+    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.jqprint-0.3.js")"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("#print").click(function () {
+               $('.printdiv').jqprint({ importCSS: true });
+            });
+        });
+    </script>
 </head>
 
 
@@ -63,22 +72,29 @@
     <!-- End of Header -->
     <!-- Main container -->
     <div class="container error-page-cntainer ">
+    <div class="row">
+    <div class="span12">
+        <div class="lead"><p><span class="dropcapC">Y</span>ou have successfully booked an appointment</p></div><br />
+        <div class="alert alert-warning"><strong>Note</strong>: This is not an appointment confirmation</div>
+    </div>
+    </div>
 	<div class="row">
 		<!--404 with error message show area start here-->
 		<div class="span8">
-			<div class="leftSide">
-				<div class="well-login appointment">                        
+			<div class="leftSide printdiv" id="leftSide">
+				<div class="well-login appointment" style="margin-top:10px">                        
 				<div >
-					<h3><span>Done!</span></h3>
-					<h4>We have received your appointment request</h4>
+					
+					<h4>You have been sent an email</h4>
 					<p>
 						One of our staff will be in touch with you
-
                         <br /><br />
+                        <h4>Your Client Id:
+                         <strong>@{int clientId = ViewBag.clientId; @clientId}</strong> </h4><br />
                         <h4>Your appointment details:</h4><br />
                         <h3>Branch:</h3> <strong>@(Model.Branch_Name)</strong> <br />
                         <strong>Location:</strong> @Model.Address.Address_Name, @Model.Address.City, @Model.Address.State <br />
-                        <strong>Country:</strong> @Model.Address.Country, @Model.Address.Zipcode <br />
+                        <strong>Country:</strong> @Model.Address.Country.Country_Name, @Model.Address.Zipcode <br />
                         @{
                             DateTime appDateTime = ViewBag.AppDateTime;
                             @:<strong>Your preferred date:</strong> @appDateTime.DayOfWeek, @appDateTime.Day-@appDateTime.Month-@appDateTime.Year
@@ -92,7 +108,7 @@
 		<!--404 with error message show area end here-->
 		<!--Right side sugestions area start here-->
 		<div class="span4">
-			<div class="rightSide">
+			<div class="rightSide printdiv" id="leftSide" style="padding-top:10px">
             <div class="well">
 				<h3><span>Reminder</span></h3>
 				<ol>
@@ -106,7 +122,8 @@
 		<!--Right side sugestions end start here-->
 
         <div class="span12" style="text-align:center">
-            <a class="btn btn-success" href="@Url.Action("LogOn", "Account")">Return to login page</a>
+            <a class="btn btn-success" href="@Url.Action("LogOn", "Account")">Return to login page</a>&nbsp;&nbsp;
+            <a class="print btn btn-inverse" id="print" href="#"><span class="color-icons printer_co"></span>Print</a>
         </div>
 	</div>
 </div>
