--- a/StormWeb/Views/Course/Edit.cshtml
+++ b/StormWeb/Views/Course/Edit.cshtml
@@ -20,8 +20,9 @@
         });
     });
 </script>
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
+@using (Html.BeginForm("Edit", "Course", FormMethod.Post))
+{
+    @Html.ValidationSummary(true,"Edit was unsuccessful. Please correct errors and try again")
     <fieldset>
         <legend>Course</legend>
 
@@ -46,15 +47,16 @@
         </div>
 
         <div class="editor-label" >
-            @Html.LabelFor(model => model.Commence_Date_Sem,"Semester Commencement Date")
+            @Html.LabelFor(model => model.Commence_Date_Sem, "Semester Commencement Date")
         </div>
         <div class="editor-field">
             @Html.TextBoxFor(model => model.Commence_Date_Sem, new { @readonly = "readonly", @class = "dp" })     
          @*   @Html.ValidationMessageFor(model => model.Course_Level_Id)*@
             @Html.ValidationMessageFor(model => model.Commence_Date_Sem)
+             @Html.ValidationMessage("DateError")
         </div>  
         <div class="editor-label">
-            @Html.LabelFor(model => model.Course_Name,"Course Name")
+            @Html.LabelFor(model => model.Course_Name, "Course Name")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Course_Name)
@@ -63,7 +65,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Duration,"Duration")
+            @Html.LabelFor(model => model.Duration, "Duration")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Duration)
@@ -71,7 +73,7 @@
             @Html.ValidationMessage("DurationError")
         </div>
           <div class="editor-label">
-            @Html.LabelFor(model => model.Fee,"Fee")
+            @Html.LabelFor(model => model.Fee, "Fee")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Fee)
@@ -80,14 +82,14 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Description,"Description")
+            @Html.LabelFor(model => model.Description, "Description")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)         
         </div>
 
-      
+        
 
         <p>
             <input type="submit" value="Save" />
@@ -96,5 +98,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "List")
+    @Html.ActionLink("Back to List", "ViewCourses", new { id = ViewBag.UniversityId })
 </div>
