--- a/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
+++ b/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
@@ -27,7 +27,7 @@
 <h2>
     General Document Templates </h2>
 <p>
-<a  href="@Url.Action("CreateCaseTemp", new { returnId = ViewBag.clientId })" class='iframe color-icons application_add_co tip-top' data-original-title="Add New General Document Template"></a>
+
     
 @*  <a id="openCreateCaseTemp"><i class="color-icons application_add_co"></i>New Template</a>
 
@@ -43,7 +43,7 @@
 
 
 <div class="row-fluid">
-    <div class="span11">
+    <div class="span12">
         <div class="widget-block">
             <div class="widget-head">
                 <h5>
@@ -59,22 +59,16 @@
                                         Form Name
                                     </th>
                                     <th>
-                                        Path
-                                    </th>
-                                    <th>
                                         File Name
                                     </th>
                                     <th>
-                                        Uploaded On
+                                        Added On
                                     </th>
                                     <th>
-                                        Uploaded By
+                                        Added By
                                     </th>
                                     <th>
                                         Comment
-                                    </th>
-                                    <th>
-                                        Downloadable
                                     </th>
                                     <th>
                                         Required
@@ -90,10 +84,14 @@
                                             @Html.DisplayFor(modelItem => item.Name)
                                         </td>
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Path)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.FileName)
+                                            @if (item.Downloadable)
+                                            {
+                                                @Html.Link_DownloadFile(item.FileName, @Url.Action("DownloadCaseDocTemp", new { id = item.CaseDocTemplate_Id }))
+                                            }
+                                            else
+                                            {
+                                                @Html.DisplayFor(modelItem => item.FileName)
+                                            }
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.UploadedOn)
@@ -104,10 +102,6 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Comment)
                                         </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Downloadable)
-                                        </td>
-
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Required)
                                         </td>
@@ -154,6 +148,12 @@
         </div>
     </div>
 </div>
+    
+    <div class="row-fluid">
+        <div class="span12" style="text-align:center">
+            @Html.Button_Add("Add", Url.Action("CreateCaseTemp"))
+        </div>
+    </div>
 
                                                
 }
