--- a/StormWeb/Views/StudentCentre/Student.cshtml
+++ b/StormWeb/Views/StudentCentre/Student.cshtml
@@ -2,146 +2,191 @@
 @{
     ViewBag.Title = "StudentHomePage";
 }
+
+<script>
+    function getOfferLetter(id) {
+        download("offer", id);
+    }
+
+    function getCOE(id) {
+        download("coe", id);
+    }
+
+    function download(type, id) {
+        var url = "";
+        if (type == "offer")
+            url = '@(Url.Action("DownloadOfferLetter", "Document"))';
+        else if (type == "coe")
+            url = '@(Url.Action("DownloadCoE", "Document"))';
+
+        var data = "id=" + id + "&type=appId";
+
+        $.ajax({
+            url: url,
+            data: data,
+            success: function(result) {
+                
+            }
+        });
+    }
+</script>
 <div class="row-fluid">
-    <div class="span9">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h5>
-                    Application Summary</h5>
-            </div>
-            <div class="widget-content">
-                <div class="widget-box">
-                    <br />
-                    <table class="table">
-                        @if (Model == null)
-                        {
-                            <tr>
-                                <td colspan="5">
-                                    Currently You have no Applications <a href="@Url.Action("Index", "Course")">Start a
-                                        New Application</a>
-                                </td>
-                            </tr> 
-                        }
-
-
-                        else
-                        {
-                            if (Model.courseTable.Count == 0)
+    <div class="row-fluid">
+        <div class="span9">
+            <div class="widget-block">
+                <div class="widget-head">
+                    <h5>
+                        Applications Summary
+                    </h5>
+                </div>
+                <div class="widget-content">
+                    <div class="widget-box">
+                        <br />
+                        <table class="table">
+                            @if (Model == null)
                             {
-                            <tr>
-                                <td colspan="5">
-                                    Currently You have no Applications <a href="@Url.Action("Index", "Course")">Start a
-                                        New Application</a>
-                                </td>
-                            </tr> 
+                                <tr>
+                                    <td colspan="5">
+                                        Currently You have no Applications <a href="@Url.Action("Index", "Course")">Start a
+                                            New Application</a>
+                                    </td>
+                                </tr> 
                             }
                             else
                             {
-                            <thead>
-                                <tr>
-                                    <th>
-                                        <i class="color-icons book_open_co"></i>University
-                                    </th>
-                                    <th>
-                                        <i class="color-icons book_co"></i>Course
-                                    </th>
-                                    <th>
-                                        <i class="color-icons calendar_1_co"></i>Commencement Date
-                                    </th>
-                                    <th>
-                                        <i class="black-icons loading_bar"></i>Documents Uploaded
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.courseTable)
-                                {
+                                <thead>
                                     <tr>
-                                        <td>
-                                            @Html.Encode(item.Faculty.University.University_Name)
-                                        </td>
-                                        <td>
-                                            @Html.Encode(item.Course_Name)
-                                        </td>
-                                        <td>
-                                            @Html.Encode(item.Commence_Date_Sem.Value.ToShortDateString())
-                                        </td>
-                                        <td>
-                                            @{ 
-                                       float uploaded = 0, toUpload = 0, preuploaded = 0, value = 0; int progress = 0; string a = "";
-                                       foreach (var item1 in Model.caseTable)
-                                       {
-                                           List<StormWeb.Models.Application> appList = item.Applications.ToList();
-
-                                           foreach (StormWeb.Models.Application app in appList)
-                                           {
-                                               uploaded = StormWeb.Helper.Utilities.countUploadedApplicationDocument(item1.Student_Id, app.Application_Id) + StormWeb.Helper.Utilities.countUploadedCaseDocument(item1.Case_Id);
-                                               toUpload = StormWeb.Helper.Utilities.countCourseDocument(app.Course_Id) + StormWeb.Helper.Utilities.countTotalCaseDocument(item1.Case_Id);
-                                               if (uploaded > preuploaded)
-                                               {
-                                                   value = uploaded;
-                                               }
-                                               preuploaded = uploaded;
-                                               if (toUpload != 0)
-                                               {
-                                                   progress = Convert.ToInt32((value / toUpload) * 100);
-                                               }
-                                               a = value + " /" + toUpload;
-                                           } 
-                                                @a  
-                                       }
-                                            }
-                                            &nbsp; <a class="active tip-top" href="@Url.Action("Index", "Document")" title="Upload Pending Documents">
-                                                Upload</a>
-                                            <div class="progress progress-striped active tip-top" title="@progress%">
-                                                <div class="bar" style="width: @progress%;">
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>  
-                                }
-                                @if (ViewBag.applicationCount <  3)
-                                {
-                                    <tr>
-                                        <td colspan="5">
-                                            <a href="@Url.Action("Index", "Course")">Start a New Application</a>
-                                        </td>
+                                        <th>
+                                            Application
+                                        </th>
+                                        <th>
+                                            Files <a href="@Url.Action("Index", "Document")" class="btn btn-mini btn-primary">Download/Upload
+                                                &raquo;</a>
+                                        </th>
+                                        <th>
+                                            Status
+                                        </th>
+                                        <th>
+                                            &nbsp;
+                                        </th>
                                     </tr>
-                                }
-                            </tbody>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.caseTable.First().Applications)
+                                    {
+                                        float uploaded = 0, toUpload = 0, preuploaded = 0, value = 0; int progress = 0; int a = 0;
+                                        foreach (var item1 in Model.caseTable)
+                                        {
+                                            StormWeb.Models.Application app = item;
+                                            uploaded = StormWeb.Helper.Utilities.countUploadedApplicationDocument(item1.Student_Id, app.Application_Id) + StormWeb.Helper.Utilities.countUploadedCaseDocument(item1.Case_Id);
+                                            toUpload = StormWeb.Helper.Utilities.countCourseDocument(app.Course_Id) + StormWeb.Helper.Utilities.countTotalCaseDocument(item1.Case_Id);
+                                            if (uploaded > preuploaded)
+                                            {
+                                                value = uploaded;
+                                            }
+                                            preuploaded = uploaded;
+                                            if (toUpload != 0)
+                                            {
+                                                progress = Convert.ToInt32((value / toUpload) * 100);
+                                            }
+                                            a = Convert.ToInt32(toUpload - value);
+
+
+                                        }
+                                        <tr>
+                                            <td>
+                                                @item.Course.Course_Name
+                                                <div>@item.Course.Faculty.University.University_Name</div>
+                                            </td>
+                                            <td>
+                                            @{
+                                                
+                                                bool showDocuments = true;
+                                                if (StormWeb.Controllers.DocumentController.isOfferLetterRead(item.Application_Id))
+                                                {
+                                                    showDocuments = false;
+                                                    <div>
+                                                        Your <a target="_blank" href="@Url.Action("DownloadOfferLetter", "Document", new { id = item.Application_Id, type = "appId" })"><span class="color-icons doc_pdf_co"></span>Offer Letter</a> is
+                                                        ready for download</div>
+                                                }
+                                                if (StormWeb.Controllers.DocumentController.isCOEReady(item.Application_Id))
+                                                {
+                                                    showDocuments = false;
+                                                    <div>
+                                                        Your <a target="_blank" href="@Url.Action("DownloadCoE", "Document", new { id = item.Application_Id, type = "appId" })"><span class="color-icons doc_pdf_co"></span>CoE</a> is ready for
+                                                        download</div>
+                                                }
+                                        if (showDocuments)
+                                        {
+                                            if (a > 0)
+                                            {
+                                                    <div style="padding-bottom: 10px">
+                                                        You have <span class="badge badge-important">@a</span> more documents to complete <a href="@Url.Action("Index", "Document")">
+                                                            Upload now &raquo;</a></div>
+                                            }
+                                        }
+                                            }
+                                            </td>
+                                            <td>
+                                                <div class="alert alert-success">
+                                                    asdasd</div>
+                                            </td>
+                                            @if (!StormWeb.Controllers.DocumentController.isCOEReady(item.Application_Id))
+                                            {
+                                                <td>
+                                                    <a href="@Url.Action("Index", "Document")" class="btn btn-success">Continue &raquo</a>
+                                                </td>
+                                            }
+                                            else
+                                            {
+                                                <td>&nbsp;</td>
+                                            }
+                                        </tr>
+                                        
+                                    }
+                                    <tr>
+                                        <th colspan="4" style="text-align: center">
+                                            @if (ViewBag.applicationCount < 3)
+                                            {
+                                                <a href="@Url.Action("Index", "Course")" class="btn btn-primary">Start a New Application
+                                                    &raquo;</a>
+                                            }
+                                        </th>
+                                    </tr>
+                                </tbody>
                             }
-                        }
-                    </table>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
+        @Html.Partial("CounsellorDetails")
     </div>
-    @Html.Partial("CounsellorDetails")
-</div>                  
-    <div class="widget-content" style="padding-left: 30%; padding-right: 30%; text-align: center">
-        <div class="widget-box">
-            <div class="alert alert-info fade in">
-                <button data-dismiss="alert" class="close" type="button">
-                    x</button>
-                <strong>Don't know where to start?</strong> Check out the <strong><a href="@Url.Action("Index", "Help")">
-                    Help/FAQ</a></strong>!
-            </div>
+</div>
+<div class="widget-content" style="padding-left: 30%; padding-right: 30%; text-align: center">
+    <div class="widget-box">
+        <div class="alert alert-info fade in">
+            <button data-dismiss="alert" class="close" type="button">
+                x</button>
+            <strong>Don't know where to start?</strong> Check out the <strong><a href="@Url.Action("Index", "Help")">
+                Help/FAQ</a></strong>!
         </div>
-        @if (ViewBag.applicationCount ==0)
-        {
+    </div>
+    @if (ViewBag.applicationCount == 0)
+    {
         <div class="alert alert-info fade in">
             <button data-dismiss="alert" class="close" type="button">
                 x</button>
             <strong>You have no application </strong>Start new application <strong><a href="@Url.Action("Index", "Course")">
                 Course Finder</a></strong>!
         </div>
-         }
-        @if (ViewBag.name == "You do not have a counsellor assigned")
-        {
+    }
+    @if (ViewBag.name == "You do not have a counsellor assigned")
+    {
         <div class="alert alert-info fade in">
             <button data-dismiss="alert" class="close" type="button">
                 x</button>
             <strong>You do not have a counsellor assigned?</strong> Please wait for 48 hours.
         </div>
-        }
-    </div>
+    }
+</div>
